# agent-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/langsmith-fetch/: SKILL.md
.claude/skills/sme-guide/: SKILL.md
docs/: demo-script.md  poc-findings.md
orchestrator/: agent.py  skill_loader.py  tool_registry.py  tracer.py
scenarios/: happy_path.yaml  simple_research.yaml
scripts/: compare.py  run.py  run_smoke.py
skills/analyze/: SKILL.md
skills/draft/: SKILL.md
skills/echo/: SKILL.md
skills/research/: SKILL.md
tests/: test_skill_loader.py  test_tools.py
tools/: fetch_url.py  web_search.py
